--- a/app/src/main/res/layout/row_person.xml
+++ b/app/src/main/res/layout/row_person.xml
@@ -5,16 +5,16 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/addPersonImage"
+        android:id="@+id/selectPersonImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:srcCompat="@android:drawable/checkbox_off_background" />
+        android:src="@android:drawable/checkbox_off_background" />
 
     <TextView
         android:id="@+id/person_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="name" />
 
