--- a/app/src/main/res/layout/row_person.xml
+++ b/app/src/main/res/layout/row_person.xml
@@ -16,13 +16,15 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="name" />
+        android:text="name"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/person_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="date" />
+        android:text="date"
+        android:textSize="16sp"/>
 
 </LinearLayout>
